[project]
name = "magic-8-ball"
version = "0.1.0"
description = "A brutally honest Magic 8 Ball powered by Advanced AI"
authors = [
    {name = "Area51"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.1,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
